# Django_React_RestAPI

./: .gitignore
django_backend/: .tool-versions  pyproject.toml
django_backend/api/: models.py  serializers.py  urls.py  views.py
django_backend/api/migrations/: 0001_initial.py
django_backend/drfapi/: settings.py  urls.py
react_basic/: package-lock.json  package.json
react_basic/src/: App.js
react_basic/src/components/: ApiFetch.js  Basic1.js  Basic2.js  BasicReducer.js  BasicUseEffect.js  C.js  CompC.js  CountClick.js  Memo.js  Timer.js  TimerContainer.js
react_basic/src/contexts/: AppContext.js
